--- a/public/bug.html
+++ b/public/bug.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="id">
+<!DOCTYPE html><html lang="id">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -38,16 +37,18 @@
       display: inline-block;
       margin: 5px 5px 0 0;
       padding: 10px 15px;
-      background: #00ffff;
+      background: linear-gradient(45deg, #00ffff, #00cccc);
       color: #000;
       border: none;
-      border-radius: 8px;
+      border-radius: 25px;
       cursor: pointer;
-      transition: 0.3s;
+      transition: all 0.3s ease;
       font-size: 14px;
+      box-shadow: 0 0 10px rgba(0,255,255,0.5);
     }
     .button:hover {
-      background: #00cccc;
+      transform: scale(1.05);
+      box-shadow: 0 0 15px rgba(0,255,255,0.8);
     }
     .nav-button {
       display: block;
@@ -62,86 +63,88 @@
       text-decoration: none;
       font-weight: bold;
       cursor: pointer;
+      box-shadow: 0 0 10px rgba(0,255,255,0.5);
+      transition: all 0.3s ease;
+    }
+    .nav-button:hover {
+      background: #00dddd;
+      transform: scale(1.02);
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>📜 LIST SCRIPT WHATSAPP VIA WA</h1>
+    <h1>📜 LIST SCRIPT WHATSAPP VIA WA</h1><div class="product">
+  <div class="product-name">👑 AMBA CRASH</div>
+  <button class="button" onclick="addToCart('AMBA CRASH - ENC', 7)">+ ENC - RM7</button>
+  <button class="button" onclick="addToCart('AMBA CRASH - NO ENC', 10)">+ NO ENC - RM10</button>
+  <button class="button" onclick="addToCart('AMBA CRASH - RESELLER', 15)">+ RESELLER - RM15</button>
+</div>
 
-    <div class="product">
-      <div class="product-name">👑 AMBA CRASH</div>
-      <button class="button" onclick="addToCart('AMBA CRASH - ENC', 7)">ENC - RM7</button>
-      <button class="button" onclick="addToCart('AMBA CRASH - NO ENC', 10)">NO ENC - RM10</button>
-      <button class="button" onclick="addToCart('AMBA CRASH - RESELLER', 15)">RESSELER - RM15</button>
-    </div>
+<div class="product">
+  <div class="product-name">👺 PSYCHO CRASH</div>
+  <button class="button" onclick="addToCart('PSYCHO CRASH - NO ENC', 10)">+ NO ENC - RM10</button>
+  <button class="button" onclick="addToCart('PSYCHO CRASH - RESELLER', 15)">+ RESELLER - RM15</button>
+</div>
 
-    <div class="product">
-      <div class="product-name">👺 PSYCHO CRASH</div>
-      <button class="button" onclick="addToCart('PSYCHO CRASH - NO ENC', 10)">NO ENC - RM10</button>
-      <button class="button" onclick="addToCart('PSYCHO CRASH - RESELLER', 15)">RESSELER - RM15</button>
-    </div>
+<div class="product">
+  <div class="product-name">⚡ NEXSUS</div>
+  <button class="button" onclick="addToCart('NEXSUS - NO UP', 7)">+ NO UP - RM7</button>
+  <button class="button" onclick="addToCart('NEXSUS - FULL UP', 10)">+ FULL UP - RM10</button>
+</div>
 
-    <div class="product">
-      <div class="product-name">⚡ NEXSUS</div>
-      <button class="button" onclick="addToCart('NEXSUS - NO UP', 7)">NO UP - RM7</button>
-      <button class="button" onclick="addToCart('NEXSUS - FULL UP', 10)">FULL UP - RM10</button>
-    </div>
+<div class="product">
+  <div class="product-name">🌪️ VORTEX</div>
+  <button class="button" onclick="addToCart('VORTEX - NO UP', 5)">+ NO UP - RM5</button>
+  <button class="button" onclick="addToCart('VORTEX - FULL UP', 10)">+ FULL UP - RM10</button>
+</div>
 
-    <div class="product">
-      <div class="product-name">🌪️ VORTEX</div>
-      <button class="button" onclick="addToCart('VORTEX - NO UP', 5)">NO UP - RM5</button>
-      <button class="button" onclick="addToCart('VORTEX - FULL UP', 10)">FULL UP - RM10</button>
-    </div>
+<h2>📜 LIST SCRIPT WHATSAPP VIA TELEGRAM</h2>
 
-    <h2>📜 LIST SCRIPT WHATSAPP VIA TELEGRAM</h2>
+<div class="product">
+  <div class="product-name">🀄 MAHJONG</div>
+  <button class="button" onclick="addToCart('MAHJONG - NO UP', 10)">+ NO UP - RM10</button>
+  <button class="button" onclick="addToCart('MAHJONG - UPDATE 3X', 14)">+ UPDATE 3X - RM14</button>
+  <button class="button" onclick="addToCart('MAHJONG - PERMANENT', 20)">+ PERMANENT - RM20</button>
+</div>
 
-    <div class="product">
-      <div class="product-name">🀄 MAHJONG</div>
-      <button class="button" onclick="addToCart('MAHJONG - NO UP', 10)">NO UP - RM10</button>
-      <button class="button" onclick="addToCart('MAHJONG - UPDATE 3X', 14)">UPDATE 3X - RM14</button>
-      <button class="button" onclick="addToCart('MAHJONG - PERMANENT', 20)">PERMANENT - RM20</button>
-    </div>
+<div class="product">
+  <div class="product-name">🍥 CIKIWIR</div>
+  <button class="button" onclick="addToCart('CIKIWIR - NO UP', 7)">+ NO UP - RM7</button>
+  <button class="button" onclick="addToCart('CIKIWIR - FULL UP', 12)">+ FULL UP - RM12</button>
+</div>
 
-    <div class="product">
-      <div class="product-name">🍥 CIKIWIR</div>
-      <button class="button" onclick="addToCart('CIKIWIR - NO UP', 7)">NO UP - RM7</button>
-      <button class="button" onclick="addToCart('CIKIWIR - FULL UP', 12)">FULL UP - RM12</button>
-    </div>
+<div class="product">
+  <div class="product-name">💠 TREDICT</div>
+  <button class="button" onclick="addToCart('TREDICT - FULL UP', 30)">+ FULL UP - RM30</button>
+  <button class="button" onclick="addToCart('TREDICT - RESELLER', 40)">+ RESELLER - RM40</button>
+</div>
 
-    <div class="product">
-      <div class="product-name">💠 TREDICT</div>
-      <button class="button" onclick="addToCart('TREDICT - FULL UP', 30)">FULL UP - RM30</button>
-      <button class="button" onclick="addToCart('TREDICT - RESELLER', 40)">RESELLER - RM40</button>
-    </div>
+<div class="product">
+  <div class="product-name">⚡ ZEUS</div>
+  <button class="button" onclick="addToCart('ZEUS - NO UP', 11)">+ NO UP - RM11</button>
+  <button class="button" onclick="addToCart('ZEUS - UPDATE 3X', 15)">+ UPDATE 3X - RM15</button>
+  <button class="button" onclick="addToCart('ZEUS - PERMANENT', 25)">+ PERMANENT - RM25</button>
+</div>
 
-    <div class="product">
-      <div class="product-name">⚡ ZEUS</div>
-      <button class="button" onclick="addToCart('ZEUS - NO UP', 11)">NO UP - RM11</button>
-      <button class="button" onclick="addToCart('ZEUS - UPDATE 3X', 15)">UPDATE 3X - RM15</button>
-      <button class="button" onclick="addToCart('ZEUS - PERMANENT', 25)">PERMANENT - RM25</button>
-    </div>
+<div class="product">
+  <div class="product-name">🐉 DRAGON</div>
+  <button class="button" onclick="addToCart('DRAGON - NO UP', 4)">+ NO UP - RM4</button>
+  <button class="button" onclick="addToCart('DRAGON - UPDATE 5X', 6)">+ UPDATE 5X - RM6</button>
+  <button class="button" onclick="addToCart('DRAGON - UPDATE 7X', 7)">+ UPDATE 7X - RM7</button>
+  <button class="button" onclick="addToCart('DRAGON - PERMANENT', 10)">+ PERMANENT - RM10</button>
+  <button class="button" onclick="addToCart('DRAGON - RESELLER', 15)">+ RESELLER - RM15</button>
+</div>
 
-    <div class="product">
-      <div class="product-name">🐉 DRAGON</div>
-      <button class="button" onclick="addToCart('DRAGON - NO UP', 4)">NO UP - RM4</button>
-      <button class="button" onclick="addToCart('DRAGON - UPDATE 5X', 6)">UPDATE 5X - RM6</button>
-      <button class="button" onclick="addToCart('DRAGON - UPDATE 7X', 7)">UPDATE 7X - RM7</button>
-      <button class="button" onclick="addToCart('DRAGON - PERMANENT', 10)">PERMANENT - RM10</button>
-      <button class="button" onclick="addToCart('DRAGON - RESELLER', 15)">RESELLER - RM15</button>
-    </div>
+<a class="nav-button" href="cart.html">🧾 Lihat Cart</a>
+<a class="nav-button" href="index.html">🔙 Kembali ke Halaman Utama</a>
 
-    <a class="nav-button" href="cart.html">🧾 Lihat Cart</a>
-    <a class="nav-button" href="index.html">🔙 Kembali ke Halaman Utama</a>
-  </div>
-
-  <script>
+  </div>  <script>
     function addToCart(nama, harga) {
       const cart = JSON.parse(localStorage.getItem("cart")) || [];
       cart.push({ nama, harga });
       localStorage.setItem("cart", JSON.stringify(cart));
       alert(nama + " berjaya ditambah ke cart!");
     }
-  </script>
-</body>
+  </script></body>
 </html>
