--- a/public/bug.html
+++ b/public/bug.html
@@ -1,150 +1,201 @@
-<!DOCTYPE html><html lang="id">
+<!DOCTYPE html>
+<html lang="id">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Script Bug WhatsApp - DAMX STORE</title>
+  <title>Bug WhatsApp - DAMX STORE</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Arial', sans-serif;
-      background: linear-gradient(135deg, #0f0f0f, #1a1a1a);
+      padding: 0;
+      font-family: "Arial", sans-serif;
+      background: linear-gradient(120deg, #0f0f0f, #1a1a1a);
       color: white;
-      padding: 20px;
     }
+
     .container {
-      max-width: 700px;
+      max-width: 800px;
       margin: auto;
-      background: #181818;
-      border-radius: 15px;
       padding: 20px;
-      box-shadow: 0 0 15px rgba(0,255,255,0.3);
     }
-    h1, h2 {
+
+    h1 {
       text-align: center;
-      color: #00ffff;
+      color: #00ffcc;
+      margin-bottom: 30px;
     }
+
     .product {
+      background-color: #222;
+      border: 1px solid #444;
+      border-radius: 10px;
+      padding: 15px;
+      margin-bottom: 20px;
+      box-shadow: 0 0 10px #00ffcc55;
+    }
+
+    .product h2 {
+      margin: 0 0 10px;
+      font-size: 18px;
+      color: #00ffcc;
+    }
+
+    .price-options {
+      margin-bottom: 10px;
+    }
+
+    select {
+      padding: 8px;
+      border-radius: 5px;
+      border: none;
       background: #111;
-      margin: 10px 0;
-      padding: 10px;
-      border-radius: 10px;
+      color: white;
     }
-    .product-name {
-      font-weight: bold;
-      margin-bottom: 5px;
-    }
-    .button {
-      display: inline-block;
-      margin: 5px 5px 0 0;
+
+    button {
       padding: 10px 15px;
-      background: linear-gradient(45deg, #00ffff, #00cccc);
-      color: #000;
+      background-color: #00ffcc;
       border: none;
-      border-radius: 25px;
+      border-radius: 8px;
       cursor: pointer;
-      transition: all 0.3s ease;
-      font-size: 14px;
-      box-shadow: 0 0 10px rgba(0,255,255,0.5);
-    }
-    .button:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 15px rgba(0,255,255,0.8);
-    }
-    .nav-button {
-      display: block;
-      width: 100%;
-      margin-top: 20px;
-      padding: 12px;
-      background: #00ffff;
-      color: #000;
-      border: none;
-      border-radius: 10px;
-      text-align: center;
-      text-decoration: none;
+      color: black;
       font-weight: bold;
-      cursor: pointer;
-      box-shadow: 0 0 10px rgba(0,255,255,0.5);
-      transition: all 0.3s ease;
+      transition: background 0.3s;
     }
-    .nav-button:hover {
-      background: #00dddd;
-      transform: scale(1.02);
+
+    button:hover {
+      background-color: #00c2a8;
+    }
+
+    .credit {
+      text-align: center;
+      margin-top: 40px;
+      color: #888;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>📜 LIST SCRIPT WHATSAPP VIA WA</h1><div class="product">
-  <div class="product-name">👑 AMBA CRASH</div>
-  <button class="button" onclick="addToCart('AMBA CRASH - ENC', 7)">+ ENC - RM7</button>
-  <button class="button" onclick="addToCart('AMBA CRASH - NO ENC', 10)">+ NO ENC - RM10</button>
-  <button class="button" onclick="addToCart('AMBA CRASH - RESELLER', 15)">+ RESELLER - RM15</button>
-</div>
+    <h1>📜 SCRIPT BUG WHATSAPP</h1>
 
-<div class="product">
-  <div class="product-name">👺 PSYCHO CRASH</div>
-  <button class="button" onclick="addToCart('PSYCHO CRASH - NO ENC', 10)">+ NO ENC - RM10</button>
-  <button class="button" onclick="addToCart('PSYCHO CRASH - RESELLER', 15)">+ RESELLER - RM15</button>
-</div>
+    <!-- WA Scripts -->
+    <div class="product">
+      <h2>👑 AMBA CRASH</h2>
+      <div class="price-options">
+        <select>
+          <option disabled selected>Pilih harga</option>
+          <option>ENC - RM7</option>
+          <option>NO ENC - RM10</option>
+          <option>RESSELER - RM15</option>
+        </select>
+      </div>
+      <button>Add to Cart</button>
+    </div>
 
-<div class="product">
-  <div class="product-name">⚡ NEXSUS</div>
-  <button class="button" onclick="addToCart('NEXSUS - NO UP', 7)">+ NO UP - RM7</button>
-  <button class="button" onclick="addToCart('NEXSUS - FULL UP', 10)">+ FULL UP - RM10</button>
-</div>
+    <div class="product">
+      <h2>👺 PSYCHO CRASH</h2>
+      <div class="price-options">
+        <select>
+          <option disabled selected>Pilih harga</option>
+          <option>NO ENC - RM10</option>
+          <option>RESSELER - RM15</option>
+        </select>
+      </div>
+      <button>Add to Cart</button>
+    </div>
 
-<div class="product">
-  <div class="product-name">🌪️ VORTEX</div>
-  <button class="button" onclick="addToCart('VORTEX - NO UP', 5)">+ NO UP - RM5</button>
-  <button class="button" onclick="addToCart('VORTEX - FULL UP', 10)">+ FULL UP - RM10</button>
-</div>
+    <div class="product">
+      <h2>⚡ NEXSUS</h2>
+      <div class="price-options">
+        <select>
+          <option disabled selected>Pilih harga</option>
+          <option>NO UP - RM7</option>
+          <option>FULL UP - RM10</option>
+        </select>
+      </div>
+      <button>Add to Cart</button>
+    </div>
 
-<h2>📜 LIST SCRIPT WHATSAPP VIA TELEGRAM</h2>
+    <div class="product">
+      <h2>🌪️ VORTEX</h2>
+      <div class="price-options">
+        <select>
+          <option disabled selected>Pilih harga</option>
+          <option>NO UP - RM5</option>
+          <option>FULL UP - RM10</option>
+        </select>
+      </div>
+      <button>Add to Cart</button>
+    </div>
 
-<div class="product">
-  <div class="product-name">🀄 MAHJONG</div>
-  <button class="button" onclick="addToCart('MAHJONG - NO UP', 10)">+ NO UP - RM10</button>
-  <button class="button" onclick="addToCart('MAHJONG - UPDATE 3X', 14)">+ UPDATE 3X - RM14</button>
-  <button class="button" onclick="addToCart('MAHJONG - PERMANENT', 20)">+ PERMANENT - RM20</button>
-</div>
+    <!-- TELEGRAM Scripts -->
+    <div class="product">
+      <h2>🀄 MAHJONG</h2>
+      <div class="price-options">
+        <select>
+          <option disabled selected>Pilih harga</option>
+          <option>NO UP - RM10</option>
+          <option>UPDATE 3X - RM14</option>
+          <option>PERMANENT - RM20</option>
+        </select>
+      </div>
+      <button>Add to Cart</button>
+    </div>
 
-<div class="product">
-  <div class="product-name">🍥 CIKIWIR</div>
-  <button class="button" onclick="addToCart('CIKIWIR - NO UP', 7)">+ NO UP - RM7</button>
-  <button class="button" onclick="addToCart('CIKIWIR - FULL UP', 12)">+ FULL UP - RM12</button>
-</div>
+    <div class="product">
+      <h2>🍥 CIKIWIR</h2>
+      <div class="price-options">
+        <select>
+          <option disabled selected>Pilih harga</option>
+          <option>NO UP - RM7</option>
+          <option>FULL UP - RM12</option>
+        </select>
+      </div>
+      <button>Add to Cart</button>
+    </div>
 
-<div class="product">
-  <div class="product-name">💠 TREDICT</div>
-  <button class="button" onclick="addToCart('TREDICT - FULL UP', 30)">+ FULL UP - RM30</button>
-  <button class="button" onclick="addToCart('TREDICT - RESELLER', 40)">+ RESELLER - RM40</button>
-</div>
+    <div class="product">
+      <h2>💠 TREDICT</h2>
+      <div class="price-options">
+        <select>
+          <option disabled selected>Pilih harga</option>
+          <option>FULL UP - RM30</option>
+          <option>RESSELER - RM40</option>
+        </select>
+      </div>
+      <button>Add to Cart</button>
+    </div>
 
-<div class="product">
-  <div class="product-name">⚡ ZEUS</div>
-  <button class="button" onclick="addToCart('ZEUS - NO UP', 11)">+ NO UP - RM11</button>
-  <button class="button" onclick="addToCart('ZEUS - UPDATE 3X', 15)">+ UPDATE 3X - RM15</button>
-  <button class="button" onclick="addToCart('ZEUS - PERMANENT', 25)">+ PERMANENT - RM25</button>
-</div>
+    <div class="product">
+      <h2>⚡ ZEUS</h2>
+      <div class="price-options">
+        <select>
+          <option disabled selected>Pilih harga</option>
+          <option>NO UP - RM11</option>
+          <option>UPDATE 3X - RM15</option>
+          <option>PERMANENT - RM25</option>
+        </select>
+      </div>
+      <button>Add to Cart</button>
+    </div>
 
-<div class="product">
-  <div class="product-name">🐉 DRAGON</div>
-  <button class="button" onclick="addToCart('DRAGON - NO UP', 4)">+ NO UP - RM4</button>
-  <button class="button" onclick="addToCart('DRAGON - UPDATE 5X', 6)">+ UPDATE 5X - RM6</button>
-  <button class="button" onclick="addToCart('DRAGON - UPDATE 7X', 7)">+ UPDATE 7X - RM7</button>
-  <button class="button" onclick="addToCart('DRAGON - PERMANENT', 10)">+ PERMANENT - RM10</button>
-  <button class="button" onclick="addToCart('DRAGON - RESELLER', 15)">+ RESELLER - RM15</button>
-</div>
+    <div class="product">
+      <h2>🐉 DRAGON</h2>
+      <div class="price-options">
+        <select>
+          <option disabled selected>Pilih harga</option>
+          <option>NO UP - RM4</option>
+          <option>UPDATE 5X - RM6</option>
+          <option>UPDATE 7X - RM7</option>
+          <option>PERMANENT - RM10</option>
+          <option>RESSELER - RM15</option>
+        </select>
+      </div>
+      <button>Add to Cart</button>
+    </div>
 
-<a class="nav-button" href="cart.html">🧾 Lihat Cart</a>
-<a class="nav-button" href="index.html">🔙 Kembali ke Halaman Utama</a>
-
-  </div>  <script>
-    function addToCart(nama, harga) {
-      const cart = JSON.parse(localStorage.getItem("cart")) || [];
-      cart.push({ nama, harga });
-      localStorage.setItem("cart", JSON.stringify(cart));
-      alert(nama + " berjaya ditambah ke cart!");
-    }
-  </script></body>
+    <div class="credit">From DAMX STORE</div>
+  </div>
+</body>
 </html>
