--- a/public/index.html
+++ b/public/index.html
@@ -73,6 +73,7 @@
     <button onclick="window.location.href='bug.html'">SCRIPT BUG WHATSAPP</button>
     <button onclick="window.location.href='panel.html'">PANEL BY DAMX</button>
     <button onclick="window.location.href='murban.html'">MURBAN 777</button>
+    <button onclick="window.location.href='cart.html'">Cek Cart</button>
   </div>
 
 </body>
