--- a/public/panel.html
+++ b/public/panel.html
@@ -91,7 +91,13 @@ button {
   </div>  <script>
     function addToCart() {
       const price = document.getElementById("panelPrice").value;
-      alert("Item dimasukkan ke dalam cart.\nHarga dipilih: RM " + price);
+      const text = document.getElementById("panelPrice").options[document.getElementById("panelPrice").selectedIndex].text;
+
+      const cart = JSON.parse(localStorage.getItem('cart')) || [];
+      cart.push({ item: "PANEL: " + text, price: price });
+      localStorage.setItem('cart', JSON.stringify(cart));
+
+      alert("Item dimasukkan ke dalam cart.\nHarga dipilih: " + text);
     }
   </script></body>
 </html>
