--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,9 @@
     <button onclick="window.location.href='bug.html'">SCRIPT BUG WHATSAPP</button>
     <button onclick="window.location.href='panel.html'">PANEL BY DAMX</button>
     <button onclick="window.location.href='murban.html'">MURBAN 777</button>
-    <button onclick="window.location.href='cart.html'">Cek Cart</button>
+    <button onclick="window.location.href='cart.html'" style="background-color:#00ff88; color:#000; border: 2px solid #00ff88;">
+  🛒 Cek Cart Anda
+</button>
   </div>
 
 </body>
