--- a/public/cart.html
+++ b/public/cart.html
@@ -1,38 +1,108 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-  <title>Cart - DAMX Store</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Cart | DAMX STORE</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+    * {
+      margin: 0; padding: 0; box-sizing: border-box;
+    }
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(-45deg, #1a1a2e, #16213e, #0f3460);
+      background-size: 400% 400%;
+      animation: animateBg 15s ease infinite;
+      color: white;
+      padding: 20px;
+      min-height: 100vh;
+    }
+    @keyframes animateBg {
+      0% {background-position: 0% 50%;}
+      50% {background-position: 100% 50%;}
+      100% {background-position: 0% 50%;}
+    }
+    h1 {
+      text-align: center;
+      font-size: 28px;
+      margin-bottom: 30px;
+      color: #00ffff;
+      text-shadow: 0 0 10px #00ffff;
+    }
+    .cart-container {
+      max-width: 600px;
+      margin: 0 auto;
+      background-color: #111;
+      padding: 20px;
+      border-radius: 20px;
+      box-shadow: 0 0 15px #00ffff66;
+    }
+    .item {
+      background-color: #222;
+      padding: 15px;
+      border-radius: 10px;
+      margin-bottom: 15px;
+      box-shadow: 0 0 10px #00ffff33;
+    }
+    .item span {
+      font-weight: bold;
+      color: #00ffff;
+    }
+    .btn {
+      display: block;
+      margin: 30px auto 0;
+      background-color: #00ffff;
+      color: #000;
+      padding: 12px 25px;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      font-weight: bold;
+      box-shadow: 0 0 10px #00ffffaa;
+      transition: 0.3s;
+    }
+    .btn:hover {
+      background-color: #00cccc;
+      box-shadow: 0 0 20px #00ffffcc;
+    }
+    .footer {
+      margin-top: 30px;
+      text-align: center;
+      font-size: 14px;
+      color: #888;
+    }
+  </style>
 </head>
 <body>
-  <h2>Senarai Cart</h2>
-  <ul id="cart-list"></ul>
-  <p><strong>Total Harga: RM <span id="total-price">0</span></strong></p>
 
-  <button onclick="clearCart()">🗑 Kosongkan Cart</button>
-  <br><br>
-  <a href="index.html">⬅️ Kembali ke Halaman Utama</a>
+  <h1>Your Cart 🛒</h1>
+
+  <div class="cart-container" id="cartItems">
+    <!-- Item cart akan dimasukkan sini -->
+  </div>
+
+  <button class="btn" onclick="window.location.href='index.html'">Kembali ke Home</button>
+
+  <div class="footer">From DAMX STORE</div>
 
   <script>
-    const cart = JSON.parse(localStorage.getItem('cart')) || [];
-    let total = 0;
+    // Ambil data cart dari localStorage
+    const cartItems = JSON.parse(localStorage.getItem("cart")) || [];
 
-    const cartList = document.getElementById("cart-list");
-    const totalPriceEl = document.getElementById("total-price");
+    const container = document.getElementById("cartItems");
 
-    cart.forEach(function(itemObj) {
-      const li = document.createElement("li");
-      li.textContent = `${itemObj.item} - RM${itemObj.price}`;
-      cartList.appendChild(li);
-      total += parseFloat(itemObj.price);
-    });
-
-    totalPriceEl.textContent = total.toFixed(2);
-
-    function clearCart() {
-      localStorage.removeItem('cart');
-      alert("Cart telah dikosongkan!");
-      location.reload();
+    if (cartItems.length === 0) {
+      container.innerHTML = "<p style='text-align:center;'>Tiada item dalam cart 😢</p>";
+    } else {
+      cartItems.forEach((item, index) => {
+        const div = document.createElement("div");
+        div.className = "item";
+        div.innerHTML = `<div>🛍️ <span>${item.name}</span></div><div>💰 Harga: <span>RM${item.price}</span></div>`;
+        container.appendChild(div);
+      });
     }
   </script>
+
 </body>
 </html>
