--- a/public/cart.html
+++ b/public/cart.html
@@ -44,9 +44,35 @@
       border-radius: 10px;
       margin-bottom: 15px;
       box-shadow: 0 0 10px #00ffff33;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
-    .item span {
+    .item-info {
+      display: flex;
+      flex-direction: column;
+    }
+    .item-info span {
       font-weight: bold;
+      color: #00ffff;
+    }
+    .remove-btn {
+      background: #ff0055;
+      color: white;
+      border: none;
+      padding: 8px 12px;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 14px;
+      transition: 0.3s;
+    }
+    .remove-btn:hover {
+      background: #ff3366;
+    }
+    .total {
+      margin-top: 20px;
+      text-align: center;
+      font-size: 20px;
       color: #00ffff;
     }
     .btn {
@@ -78,30 +104,54 @@
 
   <h1>Your Cart 🛒</h1>
 
-  <div class="cart-container" id="cartItems">
-    <!-- Item cart akan dimasukkan sini -->
-  </div>
+  <div class="cart-container" id="cartItems"></div>
+
+  <div class="total">💰 Total Harga: RM <span id="totalHarga">0.00</span></div>
 
   <button class="btn" onclick="window.location.href='index.html'">Kembali ke Home</button>
 
   <div class="footer">From DAMX STORE</div>
 
   <script>
-    // Ambil data cart dari localStorage
-    const cartItems = JSON.parse(localStorage.getItem("cart")) || [];
+    function loadCart() {
+      const cart = JSON.parse(localStorage.getItem("cart")) || [];
+      const container = document.getElementById("cartItems");
+      const totalDisplay = document.getElementById("totalHarga");
+      container.innerHTML = "";
+      let total = 0;
 
-    const container = document.getElementById("cartItems");
+      if (cart.length === 0) {
+        container.innerHTML = "<p style='text-align:center;'>Tiada item dalam cart 😢</p>";
+        totalDisplay.textContent = "0.00";
+        return;
+      }
 
-    if (cartItems.length === 0) {
-      container.innerHTML = "<p style='text-align:center;'>Tiada item dalam cart 😢</p>";
-    } else {
-      cartItems.forEach((item, index) => {
+      cart.forEach((item, index) => {
+        total += parseFloat(item.price);
         const div = document.createElement("div");
         div.className = "item";
-        div.innerHTML = `<div>🛍️ <span>${item.name}</span></div><div>💰 Harga: <span>RM${item.price}</span></div>`;
+        div.innerHTML = `
+          <div class="item-info">
+            <div>🛍️ <span>${item.name}</span></div>
+            <div>💰 Harga: <span>RM${item.price}</span></div>
+          </div>
+          <button class="remove-btn" onclick="removeItem(${index})">❌</button>
+        `;
         container.appendChild(div);
       });
+
+      totalDisplay.textContent = total.toFixed(2);
     }
+
+    function removeItem(index) {
+      const cart = JSON.parse(localStorage.getItem("cart")) || [];
+      cart.splice(index, 1);
+      localStorage.setItem("cart", JSON.stringify(cart));
+      loadCart();
+    }
+
+    // Load cart on page load
+    loadCart();
   </script>
 
 </body>
