--- a/public/bug.html
+++ b/public/bug.html
@@ -184,6 +184,9 @@
       alert(itemName + " telah ditambah ke dalam cart ✔️");
     }
   </script>
-
+  
+<button style="padding: 10px 20px; background-color: #00f0ff; border: none; border-radius: 10px; color: #000; font-weight: bold; cursor: pointer;" onclick="window.location.href='index.html'">
+  ⬅️ Kembali ke Home
+</button>
 </body>
 </html>
