--- a/public/index.html
+++ b/public/index.html
@@ -7,43 +7,63 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
     * { margin: 0; padding: 0; box-sizing: border-box; }
+
     body {
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(-45deg, #1d1d30, #0c0c3f, #1a1a2e);
-      background-size: 400% 400%;
-      animation: moveBg 15s ease infinite;
+      background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+      overflow: hidden;
       color: white;
       padding: 20px;
       min-height: 100vh;
+      position: relative;
     }
-    @keyframes moveBg {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
+
+    /* Bintang bergerak */
+    .stars {
+      width: 100%;
+      height: 100%;
+      background: transparent url('https://media.giphy.com/media/3o6nURkP3V3aWFR7Di/giphy.gif') repeat;
+      background-size: cover;
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: -1;
+      opacity: 0.25;
+      animation: moveStars 60s linear infinite;
     }
+
+    @keyframes moveStars {
+      from { background-position: 0 0; }
+      to { background-position: -10000px 5000px; }
+    }
+
     header {
       text-align: center;
       margin-bottom: 30px;
     }
+
     header img {
       width: 100px;
       border-radius: 50%;
-      box-shadow: 0 0 15px cyan;
+      box-shadow: 0 0 20px #00ffff;
     }
+
     h1 {
       margin-top: 10px;
-      font-size: 28px;
+      font-size: 30px;
       color: #00ffff;
-      text-shadow: 0 0 10px #00ffff;
+      text-shadow: 0 0 20px #00ffff, 0 0 40px #00ffff;
     }
+
     .buttons {
       display: flex;
       flex-direction: column;
       align-items: center;
       gap: 20px;
     }
+
     .buttons button {
-      background: transparent;
+      background: rgba(0, 0, 0, 0.3);
       border: 2px solid #00ffff;
       padding: 15px 30px;
       font-size: 18px;
@@ -53,16 +73,32 @@
       transition: 0.3s ease;
       width: 90%;
       max-width: 400px;
-      box-shadow: 0 0 10px #00ffff80;
+      box-shadow: 0 0 15px #00ffff80;
+      backdrop-filter: blur(5px);
     }
+
     .buttons button:hover {
       background: #00ffff;
       color: #000;
-      box-shadow: 0 0 20px #00ffffcc;
+      box-shadow: 0 0 25px #00ffffcc;
+    }
+
+    .buttons button:last-child {
+      background-color: #00ff88;
+      color: #000;
+      border: 2px solid #00ff88;
+      box-shadow: 0 0 15px #00ff88aa;
+    }
+
+    .buttons button:last-child:hover {
+      background-color: #00ffaa;
+      box-shadow: 0 0 25px #00ffaaee;
     }
   </style>
 </head>
 <body>
+
+  <div class="stars"></div>
 
   <header>
     <img src="https://files.catbox.moe/b5pfw2.jpg" alt="Logo DAMX STORE">
@@ -73,9 +109,7 @@
     <button onclick="window.location.href='bug.html'">SCRIPT BUG WHATSAPP</button>
     <button onclick="window.location.href='panel.html'">PANEL BY DAMX</button>
     <button onclick="window.location.href='murban.html'">MURBAN 777</button>
-    <button onclick="window.location.href='cart.html'" style="background-color:#00ff88; color:#000; border: 2px solid #00ff88;">
-  🛒 Cek Cart Anda
-</button>
+    <button onclick="window.location.href='cart.html'">🛒 Cek Cart Anda</button>
   </div>
 
 </body>
