--- a/public/index.html
+++ b/public/index.html
@@ -5,54 +5,56 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Produk by DAMX STORE</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Poppins:wght@400;600&display=swap');
     * { margin: 0; padding: 0; box-sizing: border-box; }
 
     body {
       font-family: 'Poppins', sans-serif;
-      background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-      overflow: hidden;
-      color: white;
+      background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
+      background-size: 400% 400%;
+      animation: cyberGlow 12s ease infinite;
+      color: #ffffff;
       padding: 20px;
       min-height: 100vh;
       position: relative;
     }
 
-    /* Bintang bergerak */
-    .stars {
-      width: 100%;
-      height: 100%;
-      background: transparent url('https://media.giphy.com/media/3o6nURkP3V3aWFR7Di/giphy.gif') repeat;
-      background-size: cover;
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: -1;
-      opacity: 0.25;
-      animation: moveStars 60s linear infinite;
+    @keyframes cyberGlow {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
     }
 
-    @keyframes moveStars {
-      from { background-position: 0 0; }
-      to { background-position: -10000px 5000px; }
+    body::before {
+      content: "";
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: url('https://www.transparenttextures.com/patterns/cubes.png');
+      opacity: 0.03;
+      z-index: 0;
     }
 
     header {
       text-align: center;
       margin-bottom: 30px;
+      position: relative;
+      z-index: 1;
     }
 
     header img {
       width: 100px;
       border-radius: 50%;
-      box-shadow: 0 0 20px #00ffff;
+      box-shadow: 0 0 20px #ff00cc, 0 0 40px #ff00cc88;
     }
 
     h1 {
       margin-top: 10px;
-      font-size: 30px;
-      color: #00ffff;
-      text-shadow: 0 0 20px #00ffff, 0 0 40px #00ffff;
+      font-size: 28px;
+      font-family: 'Orbitron', sans-serif;
+      color: #ff00cc;
+      text-shadow: 0 0 10px #ff00cc, 0 0 20px #ff00cc88;
     }
 
     .buttons {
@@ -60,45 +62,45 @@
       flex-direction: column;
       align-items: center;
       gap: 20px;
+      position: relative;
+      z-index: 1;
     }
 
     .buttons button {
-      background: rgba(0, 0, 0, 0.3);
-      border: 2px solid #00ffff;
+      background: transparent;
+      border: 2px solid #00fff7;
       padding: 15px 30px;
       font-size: 18px;
-      color: #00ffff;
+      color: #00fff7;
       border-radius: 10px;
       cursor: pointer;
       transition: 0.3s ease;
       width: 90%;
       max-width: 400px;
-      box-shadow: 0 0 15px #00ffff80;
-      backdrop-filter: blur(5px);
+      box-shadow: 0 0 10px #00fff780;
+      backdrop-filter: blur(3px);
     }
 
     .buttons button:hover {
-      background: #00ffff;
+      background: #00fff7;
       color: #000;
-      box-shadow: 0 0 25px #00ffffcc;
+      box-shadow: 0 0 25px #00fff7cc;
     }
 
     .buttons button:last-child {
-      background-color: #00ff88;
+      background-color: #ffea00;
       color: #000;
-      border: 2px solid #00ff88;
-      box-shadow: 0 0 15px #00ff88aa;
+      border: 2px solid #ffea00;
+      box-shadow: 0 0 15px #ffee0088;
     }
 
     .buttons button:last-child:hover {
-      background-color: #00ffaa;
-      box-shadow: 0 0 25px #00ffaaee;
+      background-color: #fff633;
+      box-shadow: 0 0 25px #fff633cc;
     }
   </style>
 </head>
 <body>
-
-  <div class="stars"></div>
 
   <header>
     <img src="https://files.catbox.moe/b5pfw2.jpg" alt="Logo DAMX STORE">
