--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Produk by DAMX STORE</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Poppins:wght@400;600&display=swap');
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Share+Tech+Mono&display=swap');
+
+    * {
+      margin: 0; padding: 0; box-sizing: border-box;
+    }
 
     body {
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
-      background-size: 400% 400%;
-      animation: cyberGlow 12s ease infinite;
-      color: #ffffff;
+      font-family: 'Share Tech Mono', monospace;
+      background: radial-gradient(circle at center, #0f001f, #000000);
+      background-size: 300% 300%;
+      animation: moveBg 15s ease infinite;
+      color: #00ffff;
       padding: 20px;
       min-height: 100vh;
+      overflow: hidden;
       position: relative;
     }
 
-    @keyframes cyberGlow {
+    @keyframes moveBg {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
@@ -29,11 +33,16 @@
       content: "";
       position: absolute;
       top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      background-image: url('https://www.transparenttextures.com/patterns/cubes.png');
-      opacity: 0.03;
+      width: 100%; height: 100%;
+      background: repeating-linear-gradient(
+        0deg,
+        rgba(255,255,255,0.02),
+        rgba(255,255,255,0.02) 1px,
+        transparent 1px,
+        transparent 2px
+      );
       z-index: 0;
+      pointer-events: none;
     }
 
     header {
@@ -44,17 +53,17 @@
     }
 
     header img {
-      width: 100px;
+      width: 110px;
       border-radius: 50%;
-      box-shadow: 0 0 20px #ff00cc, 0 0 40px #ff00cc88;
+      box-shadow: 0 0 25px #ff00ff, 0 0 40px #00ffff;
     }
 
     h1 {
-      margin-top: 10px;
-      font-size: 28px;
+      margin-top: 15px;
+      font-size: 30px;
       font-family: 'Orbitron', sans-serif;
-      color: #ff00cc;
-      text-shadow: 0 0 10px #ff00cc, 0 0 20px #ff00cc88;
+      color: #ff00ff;
+      text-shadow: 0 0 10px #ff00ff, 0 0 20px #ff00ff80, 0 0 30px #00ffff99;
     }
 
     .buttons {
@@ -67,36 +76,38 @@
     }
 
     .buttons button {
-      background: transparent;
-      border: 2px solid #00fff7;
+      background: rgba(0,0,0,0.4);
+      border: 2px solid #00ffff;
       padding: 15px 30px;
       font-size: 18px;
-      color: #00fff7;
+      font-family: 'Share Tech Mono', monospace;
+      color: #00ffff;
       border-radius: 10px;
       cursor: pointer;
       transition: 0.3s ease;
       width: 90%;
       max-width: 400px;
-      box-shadow: 0 0 10px #00fff780;
-      backdrop-filter: blur(3px);
+      box-shadow: 0 0 12px #00ffffaa;
+      text-transform: uppercase;
+      letter-spacing: 1px;
     }
 
     .buttons button:hover {
-      background: #00fff7;
+      background: #00ffff;
       color: #000;
-      box-shadow: 0 0 25px #00fff7cc;
+      box-shadow: 0 0 25px #00ffff, 0 0 40px #00ffffaa;
     }
 
     .buttons button:last-child {
-      background-color: #ffea00;
+      background-color: #ff00ff;
       color: #000;
-      border: 2px solid #ffea00;
-      box-shadow: 0 0 15px #ffee0088;
+      border: 2px solid #ff00ff;
+      box-shadow: 0 0 15px #ff00ff88;
     }
 
     .buttons button:last-child:hover {
-      background-color: #fff633;
-      box-shadow: 0 0 25px #fff633cc;
+      background-color: #ff33ff;
+      box-shadow: 0 0 25px #ff33ffcc;
     }
   </style>
 </head>
