--- a/public/index.html
+++ b/public/index.html
@@ -6,24 +6,23 @@
   <title>Produk by DAMX STORE</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Share+Tech+Mono&display=swap');
-
     * {
       margin: 0; padding: 0; box-sizing: border-box;
     }
 
     body {
       font-family: 'Share Tech Mono', monospace;
-      background: radial-gradient(circle at center, #0f001f, #000000);
-      background-size: 300% 300%;
-      animation: moveBg 15s ease infinite;
-      color: #00ffff;
+      background: linear-gradient(135deg, #000000, #020b33, #000d1a);
+      background-size: 400% 400%;
+      animation: smoothBg 20s ease-in-out infinite;
+      color: #00eaff;
       padding: 20px;
       min-height: 100vh;
       overflow: hidden;
       position: relative;
     }
 
-    @keyframes moveBg {
+    @keyframes smoothBg {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
@@ -34,13 +33,8 @@
       position: absolute;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background: repeating-linear-gradient(
-        0deg,
-        rgba(255,255,255,0.02),
-        rgba(255,255,255,0.02) 1px,
-        transparent 1px,
-        transparent 2px
-      );
+      background: radial-gradient(circle, rgba(0,255,255,0.1) 0%, transparent 70%);
+      opacity: 0.1;
       z-index: 0;
       pointer-events: none;
     }
@@ -55,15 +49,15 @@
     header img {
       width: 110px;
       border-radius: 50%;
-      box-shadow: 0 0 25px #ff00ff, 0 0 40px #00ffff;
+      box-shadow: 0 0 20px #00eaff, 0 0 40px #00cfff;
     }
 
     h1 {
       margin-top: 15px;
       font-size: 30px;
       font-family: 'Orbitron', sans-serif;
-      color: #ff00ff;
-      text-shadow: 0 0 10px #ff00ff, 0 0 20px #ff00ff80, 0 0 30px #00ffff99;
+      color: #00eaff;
+      text-shadow: 0 0 12px #00eaff, 0 0 30px #00eaff88;
     }
 
     .buttons {
@@ -77,37 +71,37 @@
 
     .buttons button {
       background: rgba(0,0,0,0.4);
-      border: 2px solid #00ffff;
+      border: 2px solid #00eaff;
       padding: 15px 30px;
       font-size: 18px;
       font-family: 'Share Tech Mono', monospace;
-      color: #00ffff;
+      color: #00eaff;
       border-radius: 10px;
       cursor: pointer;
       transition: 0.3s ease;
       width: 90%;
       max-width: 400px;
-      box-shadow: 0 0 12px #00ffffaa;
+      box-shadow: 0 0 12px #00eaff88;
       text-transform: uppercase;
       letter-spacing: 1px;
     }
 
     .buttons button:hover {
-      background: #00ffff;
+      background: #00eaff;
       color: #000;
-      box-shadow: 0 0 25px #00ffff, 0 0 40px #00ffffaa;
+      box-shadow: 0 0 25px #00eaff;
     }
 
     .buttons button:last-child {
-      background-color: #ff00ff;
+      background-color: #00ffcc;
       color: #000;
-      border: 2px solid #ff00ff;
-      box-shadow: 0 0 15px #ff00ff88;
+      border: 2px solid #00ffcc;
+      box-shadow: 0 0 15px #00ffcc99;
     }
 
     .buttons button:last-child:hover {
-      background-color: #ff33ff;
-      box-shadow: 0 0 25px #ff33ffcc;
+      background-color: #33ffe6;
+      box-shadow: 0 0 25px #33ffe6;
     }
   </style>
 </head>
