--- a/public/index.html
+++ b/public/index.html
@@ -5,59 +5,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Produk by DAMX STORE</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Share+Tech+Mono&display=swap');
-    * {
-      margin: 0; padding: 0; box-sizing: border-box;
-    }
-
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
-      font-family: 'Share Tech Mono', monospace;
-      background: linear-gradient(135deg, #000000, #020b33, #000d1a);
+      font-family: 'Poppins', sans-serif;
+      background: radial-gradient(ellipse at bottom, #000428 0%, #004e92 100%);
       background-size: 400% 400%;
-      animation: smoothBg 20s ease-in-out infinite;
-      color: #00eaff;
+      animation: moveBg 20s ease infinite;
+      color: white;
       padding: 20px;
       min-height: 100vh;
-      overflow: hidden;
-      position: relative;
+      overflow-x: hidden;
     }
 
-    @keyframes smoothBg {
+    @keyframes moveBg {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
-    }
-
-    body::before {
-      content: "";
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: radial-gradient(circle, rgba(0,255,255,0.1) 0%, transparent 70%);
-      opacity: 0.1;
-      z-index: 0;
-      pointer-events: none;
     }
 
     header {
       text-align: center;
       margin-bottom: 30px;
       position: relative;
-      z-index: 1;
     }
 
     header img {
-      width: 110px;
+      width: 100px;
       border-radius: 50%;
-      box-shadow: 0 0 20px #00eaff, 0 0 40px #00cfff;
+      box-shadow: 0 0 15px cyan;
     }
 
     h1 {
-      margin-top: 15px;
-      font-size: 30px;
-      font-family: 'Orbitron', sans-serif;
-      color: #00eaff;
-      text-shadow: 0 0 12px #00eaff, 0 0 30px #00eaff88;
+      margin-top: 10px;
+      font-size: 28px;
+      color: #00ffff;
+      text-shadow: 0 0 10px #00ffff;
     }
 
     .buttons {
@@ -65,47 +48,98 @@
       flex-direction: column;
       align-items: center;
       gap: 20px;
-      position: relative;
-      z-index: 1;
     }
 
     .buttons button {
-      background: rgba(0,0,0,0.4);
-      border: 2px solid #00eaff;
+      background: transparent;
+      border: 2px solid #00ffff;
       padding: 15px 30px;
       font-size: 18px;
-      font-family: 'Share Tech Mono', monospace;
-      color: #00eaff;
+      color: #00ffff;
       border-radius: 10px;
       cursor: pointer;
       transition: 0.3s ease;
       width: 90%;
       max-width: 400px;
-      box-shadow: 0 0 12px #00eaff88;
-      text-transform: uppercase;
-      letter-spacing: 1px;
+      box-shadow: 0 0 10px #00ffff80;
     }
 
     .buttons button:hover {
-      background: #00eaff;
+      background: #00ffff;
       color: #000;
-      box-shadow: 0 0 25px #00eaff;
+      box-shadow: 0 0 20px #00ffffcc;
     }
 
-    .buttons button:last-child {
-      background-color: #00ffcc;
-      color: #000;
-      border: 2px solid #00ffcc;
-      box-shadow: 0 0 15px #00ffcc99;
+    /* Efek bintang jatuh */
+    .stars {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      background: transparent;
+      overflow: hidden;
+      top: 0;
+      left: 0;
+      z-index: -1;
     }
 
-    .buttons button:last-child:hover {
-      background-color: #33ffe6;
-      box-shadow: 0 0 25px #33ffe6;
+    .star {
+      position: absolute;
+      width: 2px;
+      height: 2px;
+      background: white;
+      animation: starFall 3s linear infinite;
+    }
+
+    @keyframes starFall {
+      0% { transform: translateY(0) translateX(0); opacity: 1; }
+      100% { transform: translateY(100vh) translateX(50px); opacity: 0; }
+    }
+
+    /* Marquee bawah */
+    .marquee {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      padding: 10px 0;
+      text-align: center;
+      color: cyan;
+      font-size: 16px;
+      font-weight: bold;
+      z-index: 10;
+    }
+
+    /* Butang audio */
+    #audioControl {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      background: #00ffff;
+      border: none;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      color: #000;
+      font-weight: bold;
+      cursor: pointer;
+      box-shadow: 0 0 10px #00ffffaa;
+    }
+
+    #audioControl:hover {
+      box-shadow: 0 0 20px #00ffffcc;
     }
   </style>
 </head>
 <body>
+
+  <!-- Muzik -->
+  <audio id="bgMusic" autoplay loop>
+    <source src="https://files.catbox.moe/h2zy2x.mp3" type="audio/mpeg">
+  </audio>
+  <button id="audioControl">⏸️</button>
+
+  <!-- Efek bintang -->
+  <div class="stars" id="stars"></div>
 
   <header>
     <img src="https://files.catbox.moe/b5pfw2.jpg" alt="Logo DAMX STORE">
@@ -113,11 +147,50 @@
   </header>
 
   <div class="buttons">
-    <button onclick="window.location.href='bug.html'">SCRIPT BUG WHATSAPP</button>
-    <button onclick="window.location.href='panel.html'">PANEL BY DAMX</button>
-    <button onclick="window.location.href='murban.html'">MURBAN 777</button>
-    <button onclick="window.location.href='cart.html'">🛒 Cek Cart Anda</button>
+    <button onclick="notify('SCRIPT BUG WHATSAPP'); window.location.href='bug.html'">SCRIPT BUG WHATSAPP</button>
+    <button onclick="notify('PANEL BY DAMX'); window.location.href='panel.html'">PANEL BY DAMX</button>
+    <button onclick="notify('MURBAN 777'); window.location.href='murban.html'">MURBAN 777</button>
+    <button onclick="notify('CEK CART'); window.location.href='cart.html'" style="background-color:#00ff88; color:#000; border: 2px solid #00ff88;">
+      🛒 Cek Cart Anda
+    </button>
   </div>
 
+  <!-- Text berjalan -->
+  <div class="marquee">
+    🌌 Selamat datang ke DAMX STORE — Nikmati pengalaman galaksi & belian terbaik! 🚀
+  </div>
+
+  <script>
+    // Bintang jatuh generate
+    const stars = document.getElementById("stars");
+    for(let i=0; i<50; i++) {
+      let star = document.createElement("div");
+      star.className = "star";
+      star.style.top = Math.random() * 100 + "%";
+      star.style.left = Math.random() * 100 + "%";
+      star.style.animationDuration = (Math.random() * 2 + 1) + "s";
+      stars.appendChild(star);
+    }
+
+    // Audio control
+    const bgMusic = document.getElementById("bgMusic");
+    const audioControl = document.getElementById("audioControl");
+    let playing = true;
+    audioControl.onclick = function () {
+      if (playing) {
+        bgMusic.pause();
+        audioControl.innerText = "▶️";
+      } else {
+        bgMusic.play();
+        audioControl.innerText = "⏸️";
+      }
+      playing = !playing;
+    };
+
+    // Notifikasi bila tekan
+    function notify(item) {
+      alert("Anda memilih: " + item + " 💫");
+    }
+  </script>
 </body>
 </html>
